fixed overflow-x issue

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  color: #eee;
 }
 
 html {
@@ -42,6 +43,7 @@ body {
   position: relative;
   top: 100vh;
   height: 100%;
+  overflow-x: hidden;
 }
 
 .nav-header {
@@ -98,27 +100,28 @@ body {
   z-index: 3;
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .slide-content {
   position: fixed;
   top: 0;
-  left: calc(100% / 6);
+  left: calc(100% / 12);
   font-size: 2.5rem;
-  color: #eee;
+
   height: 100vh;
-  width: calc(100% / 6 * 5);
   display: none;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: space-between;
+  align-items: center;
 }
 
 .slide-header, .slide-right {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 100%;
+}
+
+.slide-header {
+  margin-left: 30px;
 }
 
 .section-title {
@@ -139,7 +142,7 @@ body {
   height: 200px;
   width: 200px;
   border-radius: 50%;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
 
 }
 
@@ -157,7 +160,7 @@ body {
 }
 
 .slide-right p {
-  font-size: 0.6em;
+  font-size: 1.5rem;
   text-align: justify;
   text-justify: auto;
   line-height: 2rem;
